platform/Flutter/sweeteditor/lib/sweeteditor_bindings_generated.dart


/// Build render model for one editor frame
/// @param out_size Output: payload byte length (bytes, excluding extra '\0' terminator)
/// @return EditorRenderModel binary data; payload uses native byte order, and all supported platforms are currently LE.
/// Top-level layout:
/// 1. f32 split_x
/// 2. i32 split_line_visible (0=false, 1=true)
/// 3. f32 scroll_x
/// 4. f32 scroll_y
/// 5. f32 viewport_width
/// 6. f32 viewport_height
/// 7. PointF current_line
/// - f32 x
/// - f32 y
/// 8. i32 current_line_render_mode (0=BACKGROUND, 1=BORDER, 2=NONE)
/// 9. i32 lines_count
/// 10. VisualLine[lines_count] lines
/// VisualLine layout:
/// - i32 logical_line
/// - i32 wrap_index
/// - PointF line_number_position
/// - i32 kind (0=CONTENT, 1=PHANTOM, 2=CODELENS)
/// - i32 owns_gutter_semantics
/// - i32 fold_state
/// - i32 run_count
/// - VisualRun[run_count] runs
/// VisualRun layout:
/// - i32 type
/// - f32 x
/// - f32 y
/// - i32 text_utf8_length
/// - u8[text_utf8_length] text_utf8_bytes
/// - TextStyle style
/// - i32 color
/// - i32 background_color
/// - i32 font_style
/// - i32 icon_id
/// - i32 color_value
/// - f32 width
/// - f32 padding
/// - f32 margin
/// - i32 active
/// 11. i32 gutter_icon_render_count
/// 12. GutterIconRenderItem[gutter_icon_render_count] gutter_icons
/// GutterIconRenderItem layout:
/// - i32 logical_line
/// - i32 icon_id
/// - PointF origin
/// - f32 width
/// - f32 height
/// 13. i32 fold_marker_render_count
/// 14. FoldMarkerRenderItem[fold_marker_render_count] fold_markers
/// FoldMarkerRenderItem layout:
/// - i32 logical_line
/// - i32 fold_state
/// - PointF origin
/// - f32 width
/// - f32 height
/// 15. Cursor cursor
/// - TextPosition text_position
/// - i32 line
/// - i32 column
/// - PointF position
/// - f32 height
/// - i32 visible
/// - i32 show_dragger
/// 16. i32 selection_rect_count
/// 17. Rect[selection_rect_count] selection_rects
/// Rect layout:
/// - PointF origin
/// - f32 width
/// - f32 height
/// 18. SelectionHandle selection_start_handle
/// 19. SelectionHandle selection_end_handle
/// SelectionHandle layout:
/// - PointF position
/// - f32 height
/// - i32 visible
/// 20. CompositionDecoration composition_decoration
/// - i32 active
/// - PointF origin
/// - f32 width
/// - f32 height
/// 21. i32 guide_segment_count
/// 22. GuideSegment[guide_segment_count] guide_segments
/// GuideSegment layout:
/// - i32 direction
/// - i32 type
/// - i32 style
/// - PointF start
/// - PointF end
/// - i32 arrow_end
/// 23. i32 diagnostic_count
/// 24. DiagnosticDecoration[diagnostic_count] diagnostic_decorations
/// DiagnosticDecoration layout:
/// - PointF origin
/// - f32 width
/// - f32 height
/// - i32 severity
/// 25. i32 max_gutter_icons
/// 26. i32 linked_editing_rect_count
/// 27. LinkedEditingRect[linked_editing_rect_count] linked_editing_rects
/// LinkedEditingRect layout:
/// - PointF origin
/// - f32 width
/// - f32 height
/// - i32 is_active
/// 28. i32 bracket_highlight_rect_count
/// 29. Rect[bracket_highlight_rect_count] bracket_highlight_rects
/// Rect layout:
/// - PointF origin
/// - f32 width
/// - f32 height
/// 30. (optional append-only tail) ScrollbarModel vertical_scrollbar
/// 31. (optional append-only tail) ScrollbarModel horizontal_scrollbar
/// ScrollbarModel layout:
/// - i32 visible
/// - f32 alpha (0~1)
/// - Rect track
/// - Rect thumb
/// Rect layout:
/// - PointF origin
/// - f32 width
/// - f32 height
/// 32. i32 gutter_sticky (0=scrolls with content, 1=fixed)
/// 33. i32 gutter_visible (0=hidden, 1=visible)
/// 34. i32 pointer_cursor_type (0=DEFAULT, 1=TEXT, 2=HAND)
/// Call free_binary_data after use; returns NULL on failure
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> build_editor_render_model(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Get editor layout metrics
/// @param out_size Output: payload byte length (bytes, excluding extra '\0' terminator)
/// @return LayoutMetrics binary data; payload uses native byte order, and all supported platforms are currently LE.
/// Top-level layout:
/// 1. f32 font_height
/// 2. f32 font_ascent
/// 3. f32 line_spacing_add
/// 4. f32 line_spacing_mult
/// 5. f32 line_number_margin
/// 6. f32 line_number_width
/// 7. i32 max_gutter_icons
/// 8. f32 inlay_hint_padding
/// 9. f32 inlay_hint_margin
/// 10. i32 fold_arrow_mode (0=AUTO, 1=ALWAYS, 2=HIDDEN)
/// 11. i32 has_fold_regions (0=false, 1=true)
/// Call free_binary_data after use; returns NULL on failure
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> get_layout_metrics(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// EditorActionResult binary return layout (payload uses native byte order; all supported platforms are currently LE).
/// This is the only result payload for core state-changing APIs. Platforms should use needs_redraw from this payload
/// to decide whether to flush editor state and schedule repaint.
///
/// Handle gesture event
/// @param type Event type
/// @param pointer_count Finger point count
/// @param points Data for each point
/// @return EditorActionResult binary payload, returns NULL on failure
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Uint8,
    ffi.Uint8,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> handle_editor_gesture_event(
  int editor_handle,
  int type,
  int pointer_count,
  ffi.Pointer<ffi.Float> points,
  ffi.Pointer<ffi.Size> out_size,
);

/// Handle gesture event(extended version, supports modifier keys and wheel/scale parameters)
/// @param type Event type
/// @param pointer_count Finger point count
/// @param points Data for each point
/// @param modifiers Modifier key flags(SHIFT=1, CTRL=2, ALT=4, META=8)
/// @param wheel_delta_x Horizontal wheel delta (used for MOUSE_WHEEL/DIRECT_SCROLL)
/// @param wheel_delta_y Vertical wheel delta (used for MOUSE_WHEEL/DIRECT_SCROLL)
/// @param direct_scale Direct scale value (used for DIRECT_SCALE)
/// @return EditorActionResult binary payload, returns NULL on failure
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Uint8,
    ffi.Uint8,
    ffi.Pointer<ffi.Float>,
    ffi.Uint8,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> handle_editor_gesture_event_ex(
  int editor_handle,
  int type,
  int pointer_count,
  ffi.Pointer<ffi.Float> points,
  int modifiers,
  double wheel_delta_x,
  double wheel_delta_y,
  double direct_scale,
  ffi.Pointer<ffi.Size> out_size,
);

/// Recompute pointer presentation for the last observed mouse position after modifier keys change.
/// @param modifiers Modifier key flags(SHIFT=1, CTRL=2, ALT=4, META=8)
/// @return EditorActionResult binary payload, returns NULL on failure
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Uint8,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_update_pointer_modifiers(
  int editor_handle,
  int modifiers,
  ffi.Pointer<ffi.Size> out_size,
);

/// Tick edge-scroll during drag selection / handle drag.
/// Call at ~16ms intervals while the previous EditorActionResult.needs_edge_scroll was true.
/// Returns the same EditorActionResult binary layout as handle_editor_gesture_event.
/// When needs_edge_scroll becomes false in the returned payload, stop the timer.
/// @return EditorActionResult binary payload
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> editor_tick_edge_scroll(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Tick fling (inertial scroll) animation.
/// Call each frame while the previous EditorActionResult.needs_fling was true.
/// The core tracks real elapsed time internally; any frame interval is fine.
/// Returns the same EditorActionResult binary layout as handle_editor_gesture_event.
/// When needs_fling becomes false in the returned payload, stop the timer.
/// @return EditorActionResult binary payload
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> editor_tick_fling(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Unified animation tick: advances all active animations (edge-scroll, fling).
/// Platform can use a single frame callback driven by needs_animation and call this
/// instead of editor_tick_edge_scroll() / editor_tick_fling() separately.
/// Returns the same EditorActionResult binary layout as handle_editor_gesture_event.
/// When needs_animation becomes false in the returned payload, stop the callback.
/// @return EditorActionResult binary payload
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> editor_tick_animations(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Handle keyboard event (optional default key mapping; platform layer can bypass this API and call atomic operation APIs directly)
/// @param key_code Key code (KeyCode enum value)
/// @param text Input text (UTF8; pass for normal character input, pass NULL for special keys)
/// @param modifiers Modifier key flags(SHIFT=1, CTRL=2, ALT=4, META=8)
/// @return EditorActionResult binary payload, returns NULL on failure
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Uint16,
    ffi.Pointer<ffi.Char>,
    ffi.Uint8,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> handle_editor_key_event(
  int editor_handle,
  int key_code,
  ffi.Pointer<ffi.Char> text,
  int modifiers,
  ffi.Pointer<ffi.Size> out_size,
);

/// Set custom key map from binary payload.
/// Payload format (LE byte order):
/// u32 binding_count
/// Repeat binding_count times:
/// u8  first_modifiers
/// u16 first_key_code
/// u8  second_modifiers
/// u16 second_key_code  (0 = single-chord)
/// u32 command          (EditorCommand enum value)
/// Invalid or empty payload is ignored (current key map is preserved).
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_keymap(
  int editor_handle,
  ffi.Pointer<ffi.Uint8> data,
  int size,
  ffi.Pointer<ffi.Size> out_size,
);

/// Insert text at cursor position (replace selected text if selection exists)
/// @param text UTF8 text to insert
/// @return EditorActionResult binary payload, returns NULL on failure
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_insert_text(
  int editor_handle,
  ffi.Pointer<ffi.Char> text,
  ffi.Pointer<ffi.Size> out_size,
);
